2009-11-01  higepon  <higepon@users.sourceforge.jp>

	* Compnum.h : Fixed expt for exact numbers. Issue 111 pointed out by Iceland.Gyrfalcon.

	* lib/mosh/ffi.ss : Added size-of-float and size-of-double. Issue 108 pointed out by mrc.mgg.

2009-10-21  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/config.ss.in: Fixed typo pointed out by tabe.fixedpoint. Issue 107.

2009-10-20  higepon  <higepon@users.sourceforge.jp>

	* test/number.scm : Added regression tests for Issue 105 thanks to mrc.mgg.

	* Arithmetic.cpp (Arithmetic::isInteger): Fixed isInteger for Complex number (A part of Issue 105).

	* NumberReader.y: Fixed a bug, #i3.0+0i should be 3.0+0.0i. (A part of Issue 105).

	* Arithmetic.cpp (Arithmetic::numberToString): Fixed a bug on Complex number.

2009-10-09  higepon  <higepon@users.sourceforge.jp>

	* tools/psyntax-r6rs/rev10_to_10/psyntax/compat.ss: Refixed Issue 102.

	* call.inc.cpp : Fixed Issue 98 pointed out by tabe.fixedpoint.

2009-10-07  higepon  <higepon@users.sourceforge.jp>

	* tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss: Fixed return values of (assert ...). Issue 96 by tabe.fixedpoint.

	* main.cpp (showVersion): Shows svn revision number. Issue 103 suggested by mrc.mgg.

2009-10-02  higepon  <higepon@users.sourceforge.jp>

	* tools/psyntax-r6rs/rev10_to_10/psyntax/compat.ss: Fixed Issue 102 pointed out by mrc.mgg.

2009-09-29  higepon  <higepon@users.sourceforge.jp>

	* Makefile.am : Added support for out-of-tree builds, patch by a.rottmann@gmx.at. Issue 99.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/compat.ss: Removed unused debug message.
	                                                    Issue 100 pointed out by mrc.mgg.

2009-09-04  higepon  <higepon@users.sourceforge.jp>

	* Transcoder.cpp (Transcoder::Transcoder): Fixed the default EolStyle of Transcoder ponted out by mtakuya.

	* FFIProcedures.cpp : void* argument of callback is converted to pointer object.

	* ffi_stub_x86_64.S : Renamed.
